Corrects news cards section width at larger screen sizes.
Also makes the card images scale and fade at larger screen sizes but not smaller ones. Fixes 3rd cards sizing issue at small screen sizes. Fixes bottom border on nav bar product cards. Corrects many layout issues with the hero.

--- a/css/style.css
+++ b/css/style.css
@@ -123,7 +123,7 @@ body {
     width: 970px;
     margin-left: auto;
     margin-right: auto;
-    padding: 20px 15px 21px 15px;
+    padding: 20px 15px 26px 15px;
   }
 }
 
@@ -1145,8 +1145,6 @@ body {
 }
 
 .hero-bg {
-  background-image: -webkit-gradient(linear, left top, right bottom, color-stop(30%, black), to(rgba(0, 0, 0, 0))), url("/img/home-3wAI (2).jpg");
-  background-image: linear-gradient(to bottom right, black 30%, rgba(0, 0, 0, 0)), url("/img/home-3wAI (2).jpg");
   width: 100%;
   height: 100%;
   background-size: cover;
@@ -1158,8 +1156,17 @@ body {
   display: flex;
 }
 
-@media screen and (max-width: 992px) {
+@media screen and (max-width: 768px) {
   .hero-bg {
+    background-image: -webkit-gradient(linear, left top, right top, color-stop(5%, black), to(rgba(0, 0, 0, 0))), url("/img/home-3wAI (2).jpg");
+    background-image: linear-gradient(to right, black 5%, rgba(0, 0, 0, 0)), url("/img/home-3wAI (2).jpg");
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .hero-bg {
+    background-image: -webkit-gradient(linear, left top, right top, color-stop(5%, black), to(rgba(0, 0, 0, 0))), url("/img/home-3wAI (2).jpg");
+    background-image: linear-gradient(to right, black 5%, rgba(0, 0, 0, 0)), url("/img/home-3wAI (2).jpg");
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
@@ -1180,19 +1187,48 @@ body {
   }
 }
 
+@media screen and (min-width: 1260px) {
+  .hero-bg {
+    background-image: -webkit-gradient(linear, left top, right top, color-stop(10%, rgba(0, 0, 0, 0.9)), to(rgba(0, 0, 0, 0))), url("/img/home-3wAI (2).jpg");
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.9) 10%, rgba(0, 0, 0, 0)), url("/img/home-3wAI (2).jpg");
+  }
+}
+
 .hero-text-wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-@media screen and (max-width: 992px) {
+@media screen and (max-width: 768px) {
   .hero-text-wrapper {
-    margin: auto 5%;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .hero-text-wrapper {
+    width: 750px;
+    margin-left: auto;
+    margin-right: auto;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
@@ -1201,20 +1237,29 @@ body {
 
 @media screen and (min-width: 992px) {
   .hero-text-wrapper {
-    margin-left: 3%;
+    width: 970px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 15px;
+    padding-right: 15px;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     -webkit-box-align: start;
         -ms-flex-align: start;
-            align-items: start;
+            align-items: flex-start;
   }
 }
 
 @media screen and (min-width: 1260px) {
   .hero-text-wrapper {
-    margin-left: 10%;
+    width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
@@ -1245,8 +1290,14 @@ body {
 }
 
 .hero-subtitle {
-  line-height: 1.8;
-  margin-bottom: 2.5rem;
+  line-height: 2.25rem;
+  margin-bottom: 2.25rem;
+}
+
+@media screen and (max-width: 768px) {
+  .hero-subtitle {
+    font-size: 1.25rem;
+  }
 }
 
 @media screen and (min-width: 768px) {
@@ -1270,21 +1321,13 @@ body {
   margin: auto auto 0 auto;
   height: auto;
   font-size: 1.25rem;
-  padding: 5px 20px;
+  padding: 3px 20px;
   text-align: center;
-  border-radius: 3px;
   line-height: 50px;
 }
 
 .hero-button:hover {
   background-color: #79539A;
-}
-
-.hero-button svg {
-  height: 20%;
-  width: 20%;
-  padding-top: 0.7rem;
-  padding-right: 0.7rem;
 }
 
 /*========== CARDS ===========*/
@@ -1961,6 +2004,22 @@ body {
   }
 }
 
+@media screen and (min-width: 768px) {
+  .news-title {
+    width: 750px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .news-title {
+    width: 970px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
 @media screen and (min-width: 1260px) {
   .news-title {
     width: 1200px;
@@ -1997,9 +2056,6 @@ body {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
     padding: 2rem 1rem;
   }
 }
@@ -2013,7 +2069,9 @@ body {
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
             flex-direction: row;
-    margin: 0 auto;
+    width: 750px;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
@@ -2026,6 +2084,9 @@ body {
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
             flex-direction: row;
+    width: 970px;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
@@ -2113,10 +2174,20 @@ body {
   transition: all .25s ease-in-out;
 }
 
-.card-img-top img:hover {
-  -webkit-transform: scale(1.1);
-          transform: scale(1.1);
-  opacity: 0.8;
+@media screen and (min-width: 992px) {
+  .card-img-top img:hover {
+    -webkit-transform: scale(1.1);
+            transform: scale(1.1);
+    opacity: 0.8;
+  }
+}
+
+@media screen and (min-width: 1260px) {
+  .card-img-top img:hover {
+    -webkit-transform: scale(1.1);
+            transform: scale(1.1);
+    opacity: 0.8;
+  }
 }
 
 .news-body {
@@ -2244,7 +2315,7 @@ body {
 
 @media screen and (min-width: 1260px) {
   .job-card {
-    display: inline-block;
+    display: block;
   }
 }
 
