--- a/sass/partials/sections/_header-nav.scss
+++ b/sass/partials/sections/_header-nav.scss
@@ -63,7 +63,7 @@
         justify-content: space-around;
         width: 970px;
         @include mginlrauto;
-        padding: 20px 15px 21px 15px;
+        padding: 20px 15px 26px 15px;
     }
     //Extra Large
     @media screen and (min-width: $break-xl) {
