--- a/sass/partials/sections/_hero.scss
+++ b/sass/partials/sections/_hero.scss
@@ -21,50 +21,71 @@
 }
 
 .hero-bg {
-    background-image:
-    linear-gradient(to bottom right , rgba(0,0,0,1) 30% , rgba(0,0,0,0)),
-    url('/img/home-3wAI\ \(2\).jpg');
+    
     width: 100%;
     height: 100%;
     background-size: cover;
     background-position: center;
     object-fit: none;
     display: flex;
-    //Up to Large
-    @media screen and (max-width: $break-lg) {
-    justify-content: center;
-    align-items: center;
+    //Up to Medium
+    @media screen and (max-width: $break-m) {
+        background-image:
+        linear-gradient(to right , rgba(0,0,0,1) 5% , rgba(0,0,0,0)),
+        url('/img/home-3wAI\ \(2\).jpg');
+    }
+    //Medium
+    @media screen and (min-width: $break-m) {
+        background-image:
+        linear-gradient(to right , rgba(0,0,0,1) 5% , rgba(0,0,0,0)),
+        url('/img/home-3wAI\ \(2\).jpg');
+        justify-content: center;
+        align-items: center;
     }
     //Large and Up
     @media screen and (min-width: $break-lg) {
-    justify-content: flex-start;
-    align-items: center;
+        justify-content: flex-start;
+        align-items: center;
     }
     //Extra Large
     @media screen and (min-width: $break-xl) {
-    
+        background-image: 
+        linear-gradient(to right , rgba(0,0,0,0.9) 10% , rgba(0,0,0,0)),
+        url('/img/home-3wAI\ \(2\).jpg');
     }
 }
 
 .hero-text-wrapper {
-    // padding: 55% 5%;
-    //Up to Large
     display: flex;
-    //Up to Large
-    @media screen and (max-width: $break-lg) {
-    margin: auto 5%;
-    flex-direction: column;
-    align-items: center;
+    //Up to Medium
+    @media screen and (max-width: $break-m) {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        @include mginlrauto;
+    }
+    //Medium and up
+    @media screen and (min-width: $break-m) {
+        width: 750px;
+        @include mginlrauto;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
     }
     //Large and Up
     @media screen and (min-width: $break-lg) {
-    margin-left: 3%;
-    flex-direction: column;
-    align-items: start;
+        width: 970px;
+        @include mginlrauto;
+        padding-left: 15px;
+        padding-right: 15px;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
     }
     //Extra Large
     @media screen and (min-width: $break-xl) {
-    margin-left: 10% ;
+        width: 1200px;
+        @include mginlrauto;
     }
 }
 
@@ -98,8 +119,12 @@
 }
 
 .hero-subtitle {
-    line-height: 1.8;
-    margin-bottom: 2.5rem;
+    line-height: 2.25rem;
+    margin-bottom: 2.25rem;
+    //Up to Medium
+    @media screen and (max-width: $break-m) {
+        font-size: 1.25rem;
+    }
     //Medium and up
     @media screen and (min-width: $break-m) {
         font-size: 1.25rem;
@@ -126,17 +151,10 @@
     margin: auto auto 0 auto;
     height: auto;
     font-size: 1.25rem;
-    padding: 5px 20px;
+    padding: 3px 20px;
     text-align: center;
-    border-radius: 3px;
     line-height: 50px;
     &:hover {
         background-color: $web-dark;
-    }
-    svg {
-        height: 20%;
-        width: 20%;
-        padding-top: 0.7rem;
-        padding-right: 0.7rem;
     }
 }
